--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,7 @@ function m1result(){
   document.getElementById('mb1').scrollTop=0
 }
 // ★ Google Apps Script 웹앱 URL (설정 후 여기에 붙여넣기)
-const GAS_URL =https://script.google.com/macros/library/d/16vMkUqOxuUaabobM9xHQbMwWjX-S_WH6MHlROUUVzH8R6UJAG289MTaa/2
+const GAS_URL = 'YOUR_APPS_SCRIPT_URL_HERE';
 
 function m1sub(){
   const name  = document.getElementById('m1name').value.trim();
